# md-check

./: .dockerignore  Cargo.toml  Dockerfile  README.md  action.yml  test-cases.md
.github/: dependabot.yml  hooks.yaml
.github/workflows/: markdown-check.yml  pipeline.yml
src/: lib.rs  link_checker.rs  linter.rs  main.rs
src/rules/: common.rs  line_too_long.rs  mod.rs  no_consecutive_empty_lines.rs  no_empty_links.rs  no_html.rs
tests/: integration_test.rs
