[package]
name = "md-check"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
pulldown-cmark = "0.13.0"
regex = "1.12.3"
reqwest = { version = "0.13.1", features = ["blocking"] }
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"
walkdir = "2.5.0"
futures = "0.3.31"
thiserror = "2.0.18"
anyhow = "1.0.101"
colored = "3.1.1"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json"] }
assert_cmd = "2.1.2"
predicates = "3.1.3"
tempfile = "3.25.0"
mockito = "1.7.2"
