[package]
name = "md-check"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
pulldown-cmark = "0.13.1"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["blocking"] }
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"
walkdir = "2.5.0"
futures = "0.3.32"
thiserror = "2.0.18"
anyhow = "1.0.102"
colored = "3.1.1"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }
assert_cmd = "2.1.2"
predicates = "3.1.4"
tempfile = "3.25.0"
mockito = "1.7.2"
